--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,8 @@ results
 logs
 # ignore R temp files
 .Rhistory
+# ignore unique sample and config files
+config/config_*.yaml
+config/samples_*.tsv
+config/cluster.yaml
+config/units.tsv
