--- a/slurm/settings.json
+++ b/slurm/settings.json
@@ -1,6 +1,5 @@
 {
     "SBATCH_DEFAULTS": "",
     "CLUSTER_NAME": "",
-    "CLUSTER_CONFIG": "../config/cluster.yaml",
-    "ADVANCED_ARGUMENT_CONVERSION": "no"
+    "CLUSTER_CONFIG": "../config/cluster.yaml"
 }
