Updating mapping file structure
Previously, mapped files were kept in a dataset specific folder, which
meant that sequences would need to be remapped if used in multiple
datasets. Now, the structure allows for sharing of bam files across
datasets, presuming that no code/params have changed in the bam
processing steps.

--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -50,13 +50,13 @@ all_outputs = []
 # 			"_all.ibsMat"
 
 if config["analyses"]["qualimap"]:
-	all_outputs.append(expand(results+
-			"/qc/qualimap/{sample}/genome_results.txt",
+	all_outputs.append(expand(
+		"results/mapping/qc/qualimap/{sample}/genome_results.txt",
 			sample=samples.index))
 
 if config["analyses"]["damageprofiler"]:
-	all_outputs.append(expand(results+
-			"/qc/damageprofiler/{sample}/dmgprof.json",
+	all_outputs.append(expand(
+		"results/mapping/qc/damageprofiler/{sample}/dmgprof.json",
 			sample=samples.index[samples['depth'] == 'low'].tolist()))
 
 if config["analyses"]["relatedness"]:
