--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,6 @@ logs
 # ignore unique sample and config files
 config/config_*.yaml
 config/samples_*.tsv
+# ignore vagrant stuff for testing VM
+.vagrant
+Vagrantfile
