--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -62,7 +62,7 @@ if config["analyses"]["endogenous_content"]:
 
 if config["analyses"]["relatedness"]:
 	all_outputs.append(expand(
-		results+"/analyses/kinship/"+dataset+"_all{dp}.kinship",
+		results+"/analyses/kinship/"+dataset+"_all{dp}.kinship.html",
 		dp=subsample))
 
 if config["analyses"]["pca_pcangsd"]:
