Endo cont config needed

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -84,6 +84,7 @@ analyses:
   # quality control
   qualimap:
   damageprofiler:
+  endogenous_content:
   relatedness:
   # population genomic analyses
   pca_pcangsd:
