--- a/config/config.yaml
+++ b/config/config.yaml
@@ -109,7 +109,7 @@ params:
   picard:
     # By default we set Picard to remove duplicate reads, change to 
     # false to flag only.
-    MarkDuplicates: "REMOVE_DUPLICATES=true OPTICAL_DUPLICATE_PIXEL_DISTANCE=2500"
+    MarkDuplicates: "--REMOVE_DUPLICATES true --OPTICAL_DUPLICATE_PIXEL_DISTANCE 2500"
   angsd:
     # gl_model - 1=SAMtools, 2=GATK, 3=SOAPsnp, 4=SYK; default is 1
     gl_model: 2
