Adding evaladmix plots
Forgot to add these. They're pretty bad right now though. Need to fix
the scaling, but they're useful to see.

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -96,6 +96,7 @@ analyses:
     populations:
     individuals:
   inbreeding_ngsf-hmm:
+  ibs_matrix:
 
 #===================== Software Configuration =========================#
 
