--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -108,8 +108,8 @@ if config["analyses"]["inbreeding_ngsf-hmm"]:
 if config["analyses"]["admix_ngsadmix"]:
 	all_outputs.append(
 		expand(
-			[results+"/analyses/ngsadmix/"+dataset+
-			"_all{dp}_K{kvalue}.corres",
+			[results+"/plots/evaladmix/"+dataset+
+				"_all{dp}_K{kvalue}_evaladmix.html",
 			results+"/plots/ngsadmix/"+dataset+
 			"_all{dp}_K{kvalue}.pdf"],
 			kvalue=config["params"]["ngsadmix"]["kvalues"],
