--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -117,6 +117,15 @@ if config["analyses"]["admix_ngsadmix"]:
 			)
 		)
 
+if config["analyses"]["ibs_matrix"]:
+	all_outputs.append(
+		expand(
+			results+"/genotyping/IBSmatrix/"+dataset+
+				"_all{dp}.ibsMat",
+			dp=subsample
+		)
+	)
+
 # master target rule
 rule all:
     input: all_outputs
