--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -1,115 +1,183 @@
-# Snakemake workflow for performing several population genomic comparisons of population replicates across two different
-# habitat categories and two different time periods. These units however can be changed to any categorical variable with
-# two different types.
+# Main Snakefile for ANGSD Snakemake Pipeline
+
+# Include all rule Snakefiles for workflow
+
 
 include: "rules/common.smk"
-
 include: "rules/0.1_ref_prep.smk"
 include: "rules/0.2_ref_filt.smk"
 include: "rules/1.0_preprocessing.smk"
 include: "rules/2.0_mapping.smk"
-include: "rules/2.1_mapping_qc.smk"
+include: "rules/2.1_sample_qc.smk"
 include: "rules/2.2_dna_damage.smk"
-include: "rules/3.0_genotyping.smk"
-include: "rules/3.1_linkage_pruning.smk"
-include: "rules/3.2_sample_filt.smk"
-include: "rules/4_pca.smk"
-include: "rules/5_admixture.smk"
-include: "rules/6.0_SFS.smk"
-include: "rules/6.1_thetas.smk"
-include: "rules/6.2_fst.smk"
-include: "rules/7_inbreeding.smk"
+include: "rules/3.0_genotype_likelihoods.smk"
+include: "rules/3.1_safs.smk"
+include: "rules/3.2_beagles.smk"
+include: "rules/3.3_linkage_pruning.smk"
+include: "rules/4.0_relatedness.smk"
+include: "rules/5.0_pca.smk"
+include: "rules/6.0_admixture.smk"
+include: "rules/7.0_SFS.smk"
+include: "rules/7.1_thetas.smk"
+include: "rules/7.2_fst.smk"
+include: "rules/7.3_heterozygosity.smk"
+include: "rules/8.0_inbreeding.smk"
+include: "rules/9.0_IBS.smk"
 
-# Accumulate desired output files from config file
+
+# Set wildcard restraints
 
 if config["downsample_cov"]:
-	dp = config["downsample_cov"]
-	subsample = [f".dp{dp}", ""]
+    dp = config["downsample_cov"]
+    subsample = [f".dp{dp}", ""]
 else:
-	subsample = [""]
+    subsample = [""]
+
 
 wildcard_constraints:
-	ref=config["reference"]["name"],
-	dataset=config["dataset"],
-	sample="|".join(
-		samples.index.tolist()
-	),
-	population="|".join(
-		["all"] + 
-		["all_excl_pca-admix"] +
-		[i for i in samples.index.tolist()] +
-		[i for i in samples.population.values.tolist()] +
-		[i for i in samples.depth.values.tolist()]
-		),
-	dp=(subsample[0]+"|.{0}" if len(subsample)==2 else ".{0}"),
-	chunk="[0-9]+"
+    ref=config["reference"]["name"],
+    dataset=config["dataset"],
+    sample="|".join(samples.index.tolist()),
+    population="|".join(
+        ["all"]
+        + ["all_excl_pca-admix"]
+        + [i for i in samples.index.tolist()]
+        + [i for i in samples.population.values.tolist()]
+        + [i for i in samples.depth.values.tolist()]
+    ),
+    dp=(subsample[0] + "|.{0}" if len(subsample) == 2 else ".{0}"),
+    chunk="[0-9]+",
+
+
+# Accumulate desired output files from config file
 
 all_outputs = []
 
 if config["analyses"]["qualimap"]:
-	all_outputs.append("results/mapping/qc/qualimap/{sample}.{ref}/genome_results.txt")
+    all_outputs.append("results/mapping/qc/qualimap/{sample}.{ref}/genome_results.txt")
 
 if config["analyses"]["damageprofiler"]:
-	all_outputs.append("results/mapping/qc/damageprofiler/{histsample}.{ref}/dmgprof.json")
+    all_outputs.append(
+        "results/mapping/qc/damageprofiler/{histsample}.{ref}/dmgprof.json"
+    )
 
 if config["analyses"]["endogenous_content"]:
-	all_outputs.append("results/datasets/{dataset}/qc/endogenous_content/{dataset}.{ref}_all.endo.tsv")
+    all_outputs.append(
+        "results/datasets/{dataset}/qc/endogenous_content/{dataset}.{ref}_all.endo.tsv"
+    )
 
 if config["analyses"]["relatedness"]["ngsrelate"]:
-	all_outputs.append("results/datasets/{dataset}/analyses/kinship/ngsrelate/{dataset}.{ref}_all{dp}_relate.html")
+    all_outputs.append(
+        "results/datasets/{dataset}/analyses/kinship/ngsrelate/{dataset}.{ref}_all{dp}_relate.html"
+    )
 
 if config["analyses"]["relatedness"]["waples2019"]:
-	all_outputs.append("results/datasets/{dataset}/analyses/kinship/waples2019/{dataset}.{ref}_all{dp}.kinship.html")
+    all_outputs.append(
+        "results/datasets/{dataset}/analyses/kinship/waples2019/{dataset}.{ref}_all{dp}.kinship.html"
+    )
 
 if config["analyses"]["pca_pcangsd"]:
-	if config["excl_pca-admix"]:
-		all_outputs.extend(["results/datasets/{dataset}/plots/pca/{dataset}.{ref}_all_excl_pca-admix{dp}_pc1-2.svg", "results/datasets/{dataset}/plots/pca/{dataset}.{ref}_all_excl_pca-admix{dp}_pc3-4.svg"])
-	else:
-		all_outputs.extend(["results/datasets/{dataset}/plots/pca/{dataset}.{ref}_all{dp}_pc1-2.svg","results/datasets/{dataset}/plots/pca/{dataset}.{ref}_all{dp}_pc3-4.svg"])
+    if config["excl_pca-admix"]:
+        all_outputs.extend(
+            [
+                "results/datasets/{dataset}/plots/pca/{dataset}.{ref}_all_excl_pca-admix{dp}_pc1-2.svg",
+                "results/datasets/{dataset}/plots/pca/{dataset}.{ref}_all_excl_pca-admix{dp}_pc3-4.svg",
+            ]
+        )
+    else:
+        all_outputs.extend(
+            [
+                "results/datasets/{dataset}/plots/pca/{dataset}.{ref}_all{dp}_pc1-2.svg",
+                "results/datasets/{dataset}/plots/pca/{dataset}.{ref}_all{dp}_pc3-4.svg",
+            ]
+        )
 
 if config["analyses"]["thetas_angsd"]:
-	all_outputs.extend(expand("results/datasets/{{dataset}}/plots/thetas/{{dataset}}.{{ref}}_all{{dp}}.{stat}.pdf",
-		stat=["watterson","pi","tajima"]))
+    all_outputs.extend(
+        expand(
+            "results/datasets/{{dataset}}/plots/thetas/{{dataset}}.{{ref}}_all{{dp}}.window_{win}_{step}.{stat}.pdf",
+            stat=["watterson", "pi", "tajima"],
+            win=config["params"]["thetas"]["win_size"],
+            step=config["params"]["thetas"]["win_step"],
+        )
+    )
 
 if config["analyses"]["fst_angsd"]["populations"]:
-	all_outputs.append("results/datasets/{dataset}/plots/fst/{dataset}.{ref}_poppairs{dp}_fst.pdf")
+    all_outputs.append(
+        "results/datasets/{dataset}/plots/fst/{dataset}.{ref}_poppairs{dp}.fst.global.pdf",
+    )
+    all_outputs.extend(
+        expand(
+            "results/datasets/{{dataset}}/analyses/fst/{{dataset}}.{{ref}}_poppairs{{dp}}.fst.window_{win}_{step}.tsv",
+            win=config["params"]["fst"]["win_size"],
+            step=config["params"]["fst"]["win_step"],
+        )
+    )
 
 if config["analyses"]["fst_angsd"]["individuals"]:
-	all_outputs.append("results/datasets/{dataset}/analyses/fst/{dataset}.{ref}_indpairs{dp}.fst.sum")
+    all_outputs.append(
+        "results/datasets/{dataset}/plots/fst/{dataset}.{ref}_indpairs{dp}.fst.global.pdf",
+    )
+    all_outputs.extend(
+        expand(
+            "results/datasets/{{dataset}}/analyses/fst/{{dataset}}.{{ref}}_indpairs{{dp}}.fst.window_{win}_{step}.tsv",
+            win=config["params"]["fst"]["win_size"],
+            step=config["params"]["fst"]["win_step"],
+        )
+    )
 
 if config["analyses"]["heterozygosity_angsd"]:
-	all_outputs.append("results/datasets/{dataset}/plots/heterozygosity/{dataset}.{ref}_all{dp}_heterozygosity.pdf")
+    all_outputs.extend(
+        [
+            "results/datasets/{dataset}/plots/heterozygosity/{dataset}.{ref}_all{dp}_heterozygosity.pdf",
+            "results/datasets/{dataset}/analyses/heterozygosity/{dataset}.{ref}_all{dp}_heterozygosity.html",
+        ]
+    )
 
 if config["analyses"]["inbreeding_ngsf-hmm"]:
-	all_outputs.extend(expand("results/datasets/{{dataset}}/plots/inbreeding/{{dataset}}.{{ref}}_all{{dp}}.{stat}.pdf",
-		stat=["froh","rohreg"])
-		)
+    all_outputs.extend(
+        expand(
+            "results/datasets/{{dataset}}/plots/inbreeding/{{dataset}}.{{ref}}_all{{dp}}.{stat}.pdf",
+            stat=["froh", "rohreg"],
+        )
+    )
 
 if config["analyses"]["admix_ngsadmix"]:
-	if config["excl_pca-admix"]:
-		all_outputs.extend(
-			expand(
-				["results/datasets/{{dataset}}/plots/evaladmix/{{dataset}}.{{ref}}_all_excl_pca-admix{{dp}}_K{kvalue}_evaladmix.html",
-				"results/datasets/{{dataset}}/plots/ngsadmix/{{dataset}}.{{ref}}_all_excl_pca-admix{{dp}}_K{kvalue}.svg"],
-				kvalue=config["params"]["ngsadmix"]["kvalues"])
-			)
-	else:
-		all_outputs.extend(
-			expand(
-				["results/datasets/{{dataset}}/plots/evaladmix/{{dataset}}.{{ref}}_all{{dp}}_K{kvalue}_evaladmix.html",
-				"results/datasets/{{dataset}}/plots/ngsadmix/{{dataset}}.{{ref}}_all{{dp}}_K{kvalue}.svg"],
-				kvalue=config["params"]["ngsadmix"]["kvalues"])
-			)
+    if config["excl_pca-admix"]:
+        all_outputs.extend(
+            expand(
+                [
+                    "results/datasets/{{dataset}}/plots/evaladmix/{{dataset}}.{{ref}}_all_excl_pca-admix{{dp}}_K{kvalue}_evaladmix.html",
+                    "results/datasets/{{dataset}}/plots/ngsadmix/{{dataset}}.{{ref}}_all_excl_pca-admix{{dp}}_K{kvalue}.svg",
+                ],
+                kvalue=config["params"]["ngsadmix"]["kvalues"],
+            )
+        )
+    else:
+        all_outputs.extend(
+            expand(
+                [
+                    "results/datasets/{{dataset}}/plots/evaladmix/{{dataset}}.{{ref}}_all{{dp}}_K{kvalue}_evaladmix.html",
+                    "results/datasets/{{dataset}}/plots/ngsadmix/{{dataset}}.{{ref}}_all{{dp}}_K{kvalue}.svg",
+                ],
+                kvalue=config["params"]["ngsadmix"]["kvalues"],
+            )
+        )
 
 if config["analyses"]["ibs_matrix"]:
-	all_outputs.append("results/datasets/{dataset}/analyses/IBS/{dataset}.{ref}_all{dp}.ibsMat")
+    all_outputs.append(
+        "results/datasets/{dataset}/analyses/IBS/{dataset}.{ref}_all{dp}.ibsMat"
+    )
 
-# master target rule
+
+# Master target rule
 rule all:
-	input:
-		expand(all_outputs,
-			sample=samples.index,
-			ref=config["reference"]["name"],
-			histsample=samples.index[samples['time'] == 'historical'].tolist(),
-			dataset=config["dataset"],
-			dp=subsample)
+    input:
+        expand(
+            all_outputs,
+            sample=samples.index,
+            ref=config["reference"]["name"],
+            histsample=samples.index[samples["time"] == "historical"].tolist(),
+            dataset=config["dataset"],
+            dp=subsample,
+        ),
