--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -36,13 +36,18 @@ jobs:
       - linting
       - formatting
     steps:
-    - name: Checkout repository with submodules
+    - name: Checkout repository
       uses: actions/checkout@v3.5.2
-    - name: Test workflow
-      uses: snakemake/snakemake-github-action@v1.24.0
+    - name: Set up mamba
+      uses: mamba-org/provision-with-micromamba@v15
       with:
-        snakefile: "workflow/Snakefile"
-        args: "--configfile .test/config/config.yaml --use-conda --show-failed-logs --cores 2 --conda-cleanup-pkgs cache --use-singularity --default-resources mem_mb=1000"
+        environment-file: environment.yaml
+        extra-specs: |
+          singularity
+    - name: Test workflow
+      shell: bash -l {0}
+      run: |
+        snakemake --directory .test --configfile .test/config/config.yaml --use-conda --show-failed-logs --cores 2 --conda-cleanup-pkgs cache --use-singularity --default-resources mem_mb=1000
     - name: Test report
       uses: snakemake/snakemake-github-action@v1.24.0
       with:
