Make environment file more reproducible and only focus on things needed for running workflow, not for rules that previously had no env file.

--- a/environment.yaml
+++ b/environment.yaml
@@ -9,9 +9,7 @@ dependencies:
   # core packages for workflow
   - python =3.11.*
   - snakemake-minimal =7.25.*
+  - pandas =2.0.1
   - mamba
-  - pandas
   - graphviz
-  - perl
-  - gzip
   - pygments
