--- a/workflow/envs/r.yaml
+++ b/workflow/envs/r.yaml
@@ -2,7 +2,7 @@ channels:
   - conda-forge
   - bioconda
 dependencies:
-  - r-base
-  - r-essentials
-  - r-svglite
-  - r-hmisc
+  - r-base =4.2.*
+  - r-essentials =4.2
+  - r-svglite =2.1.1
+  - r-hmisc =5.1_0
