--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -38,7 +38,7 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3.5.2
-    - name: Set up mamba
+    - name: Set up conda environment and singularity
       uses: mamba-org/provision-with-micromamba@v15
       with:
         environment-file: environment.yaml
